--- a/app/templates/batch.html
+++ b/app/templates/batch.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Shortest Path - Batch Statistics</title>
-    <!-- <link rel="icon" href="/static/assets/pacman.png" type="image/png"> -->
+    <link rel="icon" href="/static/assets/ghost.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&family=Roboto+Mono:wght@400;700&display=swap"
         rel="stylesheet">
