--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -116,9 +116,9 @@
 
             <select id="algorithmSelect"
                 class="w-full bg-black border-2 border-gray-700 p-2 text-white mb-3 focus:border-retroyellow outline-none">
-                <option value="Dijkstra">Dijkstra</option>
+                <option value="Dijkstra" selected>Dijkstra</option>
                 <option value="Bellman-Ford">Bellman-Ford</option>
-                <option value="Floyd-Warshall" selected>Floyd-Warshall</option>
+                <option value="Floyd-Warshall">Floyd-Warshall</option>
                 <option value="Uniform Cost Search">Uniform Cost Search</option>
                 <option value="A*">A* Search</option>
             </select>
